fixed overlapping, moved buttons

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,16 @@ html {
 		padding-top: 20px;
 		padding-left: 10px;
 		font-size: 14px;
+		position: relative;
 		
+	}
+	#yesButton {
+		margin-top: 35px;
+		float:left;
+	}
+	#noButton {
+		margin-top: 35px;
+		float:left;
 	}
 	.botPara{
 		font-family: "Arial", sans-serif;
@@ -67,6 +76,7 @@ html {
 		background-color: gray; 
 		padding-left: 10px;
 		width: 50%;
+		float:left;
 		padding-bottom: 5px;
 		padding-top: 5px;
 		font-size: 14px;
